1.2.0
=====

 * Fixed some i18n markup to use new ids for the collections related messages,
   so these do not conflict with the old ones using smart folder.
   [hannosch]

 * Hide the fields properly. The user may not have permission to edit them!
   Also fix related typo-induced security hole.
   [optilude]

 * Corrected cmf_edit_kws on the new ATDocumentBase class, which is used as a
   base for ATNewsItem. It's absence caused a test failure in CMFPlone for the
   text_format which needs special handling.
   [hannosch]

1.2.0-beta2 2007-04-29
======================

 * Changed some status messages to type 'error'.
   [hannosch]

 * Add support for updating existing topic indexes and metadata from
   GenericSetup profiles
   [wichert]

 * Removed tests/runalltests.py and tests/framework.py.
   To run tests use Zope's testrunner:
   ./bin/zopectl test --nowarn -s Products.ATContentTypes
   [stefan]

1.2.0-beta1 2007-03-04
======================

 * Adjusted tests to deal with the new default vocabulary for boolean fields.
   [wichert]

 * Adjusted tests to deal with the removal of the old CMF types from the
   GenericSetup profiles. This refs http://dev.plone.org/plone/ticket/6156.
   [hannosch]

 * Set ATFile's file field to be 'searchable'.  This means that it'll
   be indexed correctly including transforms.  If you don't want this,
   set your own 'index_method', or set 'searchable' to False in your
   code.
   [nouri]

 * Extinguished last occurrences of old portal_status_message in URL support.
   [hannosch]

 * Merged plip174-reusable-i18n branch. Normalization of uploaded file names
   is now based on plone.i18n.normalizer.
   [hannosch]

1.2.0-alpha2 2007-02-08
=======================

 * Removed various obsolete class attributes from content type classes. These
   are managed by GenericSetup profiles now.
   [hannosch]

 * Updated installation tests, as ATCT is no longer 'quickinstalled' anymore.
   [hannosch]
