@@ -46,7 +46,7 @@ from Products.ATContentTypes.content.schemata import ATContentTypeSchema
 from Products.ATContentTypes.content.schemata import finalizeATCTSchema
 from Products.ATContentTypes.lib.imagetransform import ATCTImageTransform
 
-from Products.CMFPlone import PloneMessageFactory as _
+from Products.ATContentTypes import ATCTMessageFactory as _
 
 from Products.validation.config import validation
 from Products.validation.validators.SupplValidators import MaxSizeValidator
