@@ -1,6 +1,11 @@
 1.2.0
 =====
 
+ * Removed all usage of PloneMessageFactory and replaced it by using ATCT's own
+   message factory. The extraction tools aren't able to deal with two different
+   message factories used for a single package.
+   [hannosch]
+
  * Fixed some i18n markup to use new ids for the collections related messages,
    so these do not conflict with the old ones using smart folder.
    [hannosch]
